# http-server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/config/: config.h
include/handler/: handler.h  staticHandler.h
include/http/: datetime.h  http.h  regex.h  request.h  response.h
include/server/: client.h  server.h
src/: main.cpp
src/config/: config.cpp
src/handler/: staticHandler.cpp
src/http/: datetime.cpp  request.cpp  response.cpp
src/server/: client.cpp  server.cpp
